[package]
name = "cookie"
version = "0.16.0-rc.1"
authors = ["Sergio Benitez <sb@sergio.bz>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioBenitez/cookie-rs"
documentation = "https://docs.rs/cookie"
readme = "README.md"
build = "build.rs"
description = """
HTTP cookie parsing and cookie jar management. Supports signed and private
(encrypted, authenticated) jars.
"""

[features]
percent-encode = ["percent-encoding"]
secure = ["private", "signed", "key-expansion"]
private = ["aes-gcm", "base64", "rand", "subtle"]
signed = ["hmac", "sha2", "base64", "rand", "subtle"]
key-expansion = ["sha2", "hkdf"]

[dependencies]
#time = { version = "0.3", default-features = false, features = ["parsing",  "macros"] }
time = { git="https://github.com/allanbenelli/time-sgx.git", branch="sgx", default-features = false, features=["std", "parsing", "macros", "formatting"] }
percent-encoding = { version = "2.0", optional = true }

#porting for sgx
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# dependencies for secure (private/signed) functionality
aes-gcm = { version = "0.9.0", optional = true }
hmac = { version = "0.11.0", optional = true }
sha2 = { version = "0.9.0", optional = true }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx", tag = "sgx_1.1.3", optional=true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "sgx_1.1.3", optional=true  }
hkdf = { version = "0.11.0", optional = true }
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx", tag ="sgx_1.1.3", optional=true }

[build-dependencies]
version_check = "0.9"

[package.metadata.docs.rs]
all-features = true
